[package]
name = "common-alloc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common-error = { path = "../error" }
snafu.workspace = true
tempfile = "3.4"
tokio.workspace = true

[features]
default = ["jemalloc"]
jemalloc = ["tikv-jemallocator", "tikv-jemalloc-ctl", "tikv-jemalloc-sys"]

[dependencies.tikv-jemalloc-ctl]
version = "0.5.0"
optional = true
features = ["use_std"]

[dependencies.tikv-jemalloc-sys]
version = "0.5.0"
optional = true
features = ["stats"]

[dependencies.tikv-jemallocator]
version = "0.5.0"
optional = true
features = ["unprefixed_malloc_on_supported_platforms", "stats"]
